--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.redis.host=192.168.233.128
+spring.redis.host=101.132.151.4
 spring.redis.port=6379
-spring.redis.timeout=10000
+#spring.redis.timeout=10000
