feat(springboot): 整合mybatis

--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,14 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!--数据库依赖-->
 
+        <!--mybatis依赖引入-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
